--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
             <div class="trip-controls__filters">
               <h2 class="visually-hidden">Filter events</h2>
               <!-- Фильтры -->
+
             </div>
           </div>
 
@@ -44,5 +45,6 @@
           </section>
       </div>
     </main>
+    <script src="./bundle.js"></script>
   </body>
 </html>
